# ROS

ex01/: commands.txt
lab2/: .bashrc  ex01.txt
lab2/ex01/: .bashrc  ex01.txt
lab2/ex03/fffffakel/: CMakeLists.txt  package.xml
lab2/ex04/: colcon_build.txt
lab2/ex05/: rosnode_info.txt  rosnode_list.txt
lab2/ex06/: cmd_vel.txt
lab2/ex08/: rqt_console.csv  three_turtles.launch.py
lab2/ex09/full_name_pkg/: CMakeLists.txt  package.xml
lab2/ex09/full_name_pkg/log/: latest_edit  latest_list
lab2/ex09/full_name_pkg/msg/: FullNameMessage.msg
lab2/ex09/full_name_pkg/srv/: .FullNameSumService.srv.swp
lab2/ex09/install/: local_setup.sh  setup.sh
lab2/ex09/log/: latest_build  latest_edit
lab2/ex10/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
lab2/ex10/log/: latest_build
lab2/ex10/text_to_cmd_vel/: package.xml  setup.py
lab3/ex01/: commands.txt
lab3/ex01/full_name_pkg/: CMakeLists.txt  package.xml
lab3/ex01/service_full_name/: package.xml  setup.py
lab3/ex02/: command.txt  pose_speed_x1.yaml  pose_speed_x2.yaml  turtle_cmd_vel_0.mcap
lab3/ex03/: doctor.txt
lab3/ex04/: commands.txt
lab3/ex04/move_to_goal/: package.xml  setup.py
lab3/ex05/action_cleaning_robot/: package.xml  setup.py
lab4/ex01/: frames_2025-10-18_20.43.20.gv  last_transform.txt  transform.txt
lab4/ex02/: carrot.rviz  commands.txt
lab4/ex02b/: commands.txt
lab4/ex03/: commands.txt
lab5/ex01/: robot.urdf
lab5/ex02/: robot_xacro.urdf
lab5/ex03/: commands.txt
lab6/ex01-03/: commands.txt
lab6/ex04/: commands.txt
lab6/ex05/: commands.txt
(+93 files in other folders)
